# gotify-tray-cpp

./: .gitignore  CMakeLists.txt  README.md  gotify-tray++.rc  resources.qrc
.github/workflows/: develop.yml  release.yml
desktop/: gotify-tray-cpp.desktop
scripts/: build-win.ps1  gotify-tray++.iss
src/: applicationitem.cpp  applicationitem.h  applicationitemmodel.cpp  applicationitemmodel.h  appversion.cpp  appversion.h  cache.cpp  cache.h  clickablelabel.cpp  clickablelabel.h  gotifyapi.cpp  gotifyapi.h  gotifymodels.cpp  gotifymodels.h  imagepopup.cpp  imagepopup.h  listener.cpp  listener.h  main.cpp  mainapplication.cpp  mainapplication.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageitem.cpp  messageitem.h  messageitemmodel.cpp  messageitemmodel.h  messagewidget.cpp  messagewidget.h  messagewidget.ui  processthread.cpp  processthread.h  requesthandler.cpp  requesthandler.h  serverinfodialog.cpp  serverinfodialog.h  serverinfodialog.ui  settings.cpp  settings.h  (+9 more)
